fix problems with form on mobile and animation on RoomPlayer component

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -41,8 +41,8 @@ img {
 html,
 body,
 #root {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
