--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -1,4 +1,5 @@
 .form {
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
 }
